<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.learning.gptw.greatplacetowork_learning.Login.LoginGreatPlaceToWork">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="225dp"
            android:background="@drawable/login_fondo_corto">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_alignParentStart="true"

                android:padding="45dp"
                android:src="@mipmap/ic_gptw_logo" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">


            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/start_here"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/lt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingTop="30dp">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawableTint="@color/gptw"
                    android:hint="@string/usuario"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                    android:drawableTint="@color/gptw"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true" />


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/clic"
                    android:text="@string/login_ingresar"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_forgotten_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btn_login"
                    android:layout_marginTop="25dp"
                    android:text="@string/forgotten_password"
                    android:textAlignment="center" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>